trying to fix footer issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -124,6 +124,7 @@ footer {
     font-family: 'cute';
     color: white;
     font-size: 1.5rem;
+    padding: 0.1 0.1rem;
 }
 
 img {
